# assignment-servier

./: .gitignore  Makefile  README.md  pyproject.toml
conf/: config.py
package/: adhoc.py  ingest.py  transform.py  utils.py
sql/: init.sql  q1.sql  q2.sql
tests/unit_test/: unit_test.py
