[tool.poetry]
name = "assignment-servier"
version = "0.1.0"
description = ""
authors = ["kevinzhou <kevin75ha@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.pylint.messages_controls]
disable = [
    "missing-module-docstring",
    "logging-fstring-interpolation",
    "fixme",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-function-args",
    "too-many-return-statements"
]

[tool.pylint."FORMAT"]
good-names = ["f", "i", "tz", "to", "it", "df"]

# See: https://stackoverflow.com/questions/29206482/pylint-duplicate-code-false-positive
[tool.pylint."SIMILARITIES"]
min-similarity-lines = "45"
ignore-comments= "yes"
ignore-docstrings= "yes"
ignore-imports = "yes"

[tool.isort]
profile = "black"
multi_line_output = 3


[tool.sqlfluff]
sql_file_exts = [
    ".sql",
]

[tool.sqlfluff.core]
dialect = "bigquery"
rules = "L001,L002,L003,L004,L005,L006,L008,L009,L010,L012,L013,L015,L016,L018,L019,L020,L022,L023,L024,L025,L035,L036,L037,L038,L039,L040,L041,L045,L046,L048,L049,L050,L051,L052,L053,L061,L063"

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.rules.L010]  # SQL Keywords.
capitalisation_policy = "upper"
extended_capitalisation_policy = "upper"

[tool.sqlfluff.rules.L019]  # Leading/Trailing comma enforcement.
comma_style = "trailing"

[tool.sqlfluff.rules.L002]  #  Mixed Tabs and Spaces in single whitespace.
tab_space_size = 4

[tool.sqlfluff.rules.L003]  #  Indentation not consistent with previous lines.
tab_space_size = 4
#hanging_indents = True
indent_unit =  "tab"

[tool.sqlfluff.rules.L012]  # Implicit/explicit aliasing of columns
aliasing = "explicit"

[tool.sqlfluff.rules.L016]  # Line is too long.
max_line_length = 130
indent_unit = "space"
ignore_comment_lines = true
ignore_comment_clauses = true

[tool.sqlfluff.rules.L040]  # Inconsistent capitalisation of boolean/null literal.
capitalisation_policy = "upper"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.8.0"
sqlfluff = "^1.3.2"
mypy = "^0.981"
isort = "^5.10.1"
pylint = "^2.15.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
